--- a/src/components/Cabecalho/Cabecalho.scss
+++ b/src/components/Cabecalho/Cabecalho.scss
@@ -14,12 +14,19 @@
 
             text-decoration: none;
             color: #fff;
+            display: block;
+            padding: 8px 16px;
+            transition: background-color ease-out 300ms ;
 
             &:hover{
-                background-color: #444;
+                background-color: #111;
             }
             
 
+        }
+        
+        .active{
+            background-color: red !important;
         }
 
     }
